--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,7 @@ jobs:
   build:
     name: build-and-deploy
     runs-on: ubuntu-latest
+
     strategy:
       matrix:
         decks:
@@ -30,7 +31,7 @@ jobs:
 
       - name: Build mdx-deck
         run: |
-          pushd ./decks/${{matrix.decks}} && npm install && npm run build && popd && mkdir -p ./public/decks/${{matrix.deck}} && cp -R ./decks/${{matrix.decks}} ./public/decks/${{matric.decks}}
+          pushd ./decks/${{matrix.decks}} && npm install && npm run build && popd && mkdir -p ./public/decks/${{matrix.decks}} && cp -R ./decks/${{matrix.decks}} ./public/decks/${{matrix.decks}}
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v2.5.0
