--- a/decks/aws-ssm-session-manager/package.json
+++ b/decks/aws-ssm-session-manager/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolio",
+  "name": "aws-ssm-session-manager",
   "version": "1.0.0",
   "main": "index.js",
   "dependencies": {},
@@ -10,12 +10,10 @@
     "react-syntax-highlighter": "^12.2.1"
   },
   "scripts": {
-    "start": "mdx-deck deck.mdx --basepath .",
-    "build": "mdx-deck build deck.mdx & cpx \"img/*\" ./dist/img",
+    "start": "mdx-deck deck.mdx",
+    "build": "mdx-deck build deck.mdx",
     "pdf": "mdx-deck pdf --width 1377 --height 756 deck.mdx",
-    "screenshot": "mdx-deck screenshot --width 1580 --height 830 deck.mdx",
-    "deploy": "gh-pages -d dist",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "screenshot": "mdx-deck screenshot --width 1580 --height 830 deck.mdx"
   },
   "author": "",
   "license": "MIT",
