--- a/decks/aws-security-credential/package.json
+++ b/decks/aws-security-credential/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolio",
+  "name": "aws-security-credential",
   "version": "1.0.0",
   "main": "index.js",
   "dependencies": {},
@@ -10,8 +10,8 @@
     "react-syntax-highlighter": "^12.2.1"
   },
   "scripts": {
-    "start": "mdx-deck deck.mdx --basepath .",
-    "build": "mdx-deck build --no-html deck.mdx & cpx \"images/*\" ./dist/images",
+    "start": "mdx-deck deck.mdx",
+    "build": "mdx-deck build deck.mdx",
     "pdf": "mdx-deck pdf --width 1377 --height 756 deck.mdx",
     "screenshot": "mdx-deck screenshot --width 1580 --height 830 deck.mdx",
     "deploy": "gh-pages -d dist",
