--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,11 +32,8 @@ jobs:
 
       - name: Build mdx-deck
         run: |
-          rm -Rf ./public/decks/${{matrix.decks}} && cd ./decks/${{matrix.decks}} && npm install && npm run build && ls -la && mv -i ./public ../../public/decks/
+          rm -Rf ./public/decks/${{matrix.decks}} && mkdir -p ./public/decks/${{matrix.decks}} && cd ./decks/${{matrix.decks}} && npm install && npm run build && ls -la && mv -i ./public/* ../../public/decks/${{matrix.decks}}
 
-  build:
-    name: deploy
-    runs-on: ubuntu-latest
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v2.5.0
         env:
